[package]
name = "volunteer2"
version = "0.1.0"
authors = ["leehyong <947903484@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
tide-fluent-routes = "0.1.4"
async-std = { version = "1.6.0", features = ["attributes"] }
serde_json = "1.0"
serde = "1.0"
# Date time (required)
chrono = { version = "0.4", features = ["serde"] }
# logging (required)
log = "0.4"
fern = "0.6.0"
sqlx = {version="0.4.1", default=false, features=["runtime-async-std-native-tls", "mysql","chrono", "json", "macros"]}
jsonwebtoken = "7.2"
base64 = "0.13.0"
anyhow = ">=1.0.34"
thiserror = ">=1.0.22"

