[package]
name = "volunteer2"
version = "0.1.0"
authors = ["leehyong <947903484@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.1"
regex = "1.4"
#tide = "0.15.0"
tide = { path = "../tide",  version = "0.15.0"}
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
# Date time (required)
chrono = { version = "0.4", features = ["serde", "clock", "std", "alloc","unstable-locales"] }
# logging (required)
#log = "0.4"
#fern = "0.6.0"
jsonwebtoken = "7.2"
base64 = "0.13.0"
anyhow = ">=1.0.34"
thiserror = ">=1.0.22"
# BigDecimal (optional)
bigdecimal = "0.2"
#envmnt = {version="0.8.4", optional=true}
envmnt = {version="0.8.4"}

# rbatis, must maintain the same versions (required)
rbatis = { version = "1.8",default-features=false, features=["async-io", "async-io-mysql"] }
rbatis-macro-driver = { version = "1.8",default-features=false,features=["no_print"]}
validator = { version = "0.12", features = ["derive"] }
